crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/parser/ecmascript5/Statements/parserForInStatement2.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: parserForInStatement2.ts

---
# Input
```js
for (var in X) {
}

```

# Output
```js
for (var in X) {
}

```

# Errors
```
error[SyntaxError]: expected an identifier, an array pattern, or an object pattern but instead found 'in X)'
  ┌─ parserForInStatement2.ts:1:10
  │
1 │ for (var in X) {
  │          ^^^^^ Expected an identifier, an array pattern, or an object pattern here

error[SyntaxError]: expected `,` but instead found `{`
  ┌─ parserForInStatement2.ts:1:16
  │
1 │ for (var in X) {
  │                ^ unexpected

error[SyntaxError]: expected `;` but instead the file ends
  ┌─ parserForInStatement2.ts:3:1
  │
3 │ 
  │ ^ the file ends here


```


